// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartGame /> does not render board when no snapshot 1`] = `
<Stack
  alignItems="center"
  marginTop="50px"
  spacing={8}
>
  <HStack
    align="center"
    spacing={3}
  >
    <Heading
      as="h1"
      textAlign="center"
    >
      gameName
    </Heading>
    <Button
      leftIcon={<FaRegCopy />}
      onClick={[MockFunction]}
      size="sm"
      width="fit-content"
    >
      Copy invite link
    </Button>
  </HStack>
  <Stack
    alignItems={
      {
        "base": "center",
        "md": "start",
      }
    }
    direction={
      {
        "base": "column",
        "md": "row",
      }
    }
    spacing={8}
  >
    <PlayerList />
  </Stack>
</Stack>
`;

exports[`<StartGame /> renders game boards when snapshot is present 1`] = `
<Stack
  alignItems="center"
  marginTop="50px"
  spacing={8}
>
  <HStack
    align="center"
    spacing={3}
  >
    <Heading
      as="h1"
      textAlign="center"
    >
      gameName
    </Heading>
    <Button
      leftIcon={<FaRegCopy />}
      onClick={[MockFunction]}
      size="sm"
      width="fit-content"
    >
      Copy invite link
    </Button>
  </HStack>
  <Stack
    alignItems={
      {
        "base": "center",
        "md": "start",
      }
    }
    direction={
      {
        "base": "column",
        "md": "row",
      }
    }
    spacing={8}
  >
    <PlayerList />
    <Stack>
      <Text
        textAlign="center"
      >
        Here are the boards from that round:
      </Text>
      <OpponentBoardPreview
        includeCurrentPlayer={true}
        initialPlayerIndex={0}
        players={
          [
            {
              "board": [
                [
                  null,
                ],
              ],
              "gamesWon": 0,
              "hand": [],
              "isAdmin": false,
              "isReady": false,
              "isTopBanana": true,
              "userId": "123",
              "username": "username",
            },
          ]
        }
      />
    </Stack>
  </Stack>
</Stack>
`;
